fix: add missing build dependency

--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,8 @@ Package: 8852bu-dkms
 Architecture: all
 Section: misc
 Priority: optional
-Depends: ${misc:Depends},
+Depends: bc,
+         ${misc:Depends},
 Description: dkms sources for Realtek RTL8852BU Wi-Fi driver
  This package provides the dkms source code for Realtek
  RTL8852BU Wi-Fi driver.
